--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -5,9 +5,9 @@
   width: 75%;
   padding-top: 45px;
   display: flex;
-  justify-content: start;
+  /* justify-content: start; */
   flex-direction: column;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   margin: 0 auto 40px;
   border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
